# godot-arch

./: .gitignore  Cargo.toml  ReadMe.md  godot-arch.config.yaml
.github/workflows/: build.yml  lifecycle.yml  release.yml
docs/: command-line-arguments.md  configuration.md  glob-patterns.md
docs/rules/: rule-allowed-custom-resource-location.md  rule-allowed-file-location.md  rule-filename-snake-case.md  rule-node-depth-fits-max-depth.md  rule-parent-has-same-name.md  rule-root-node-is-file-name-pascal.md  rule-root-node-script-in-same-folder.md  rule-scene-nodes-pascal-case.md
godot-arch/: Cargo.toml
godot-arch-bin/: Cargo.toml
godot-arch-bin/src/: main.rs
godot-arch-cli/: Cargo.toml
godot-arch-cli/src/: main.rs
godot-arch/src/: lib.rs
src/: lib.rs  main.rs
src/interface/: config.rs
src/models/: config.rs  file_under_test.rs  mod.rs  report_entry.rs  test_results.rs  warning.rs
src/reporting/: mod.rs  test_results.rs
src/rules/: handle_validation_result.rs  mod.rs  rule_allowed_custom_resource_location.rs  rule_allowed_file_location.rs  rule_filename_snake_case.rs  rule_node_depth_fits_max_depth.rs  rule_parent_has_same_name.rs  rule_root_node_is_file_name_pascal.rs  rule_root_node_script_in_same_folder.rs  rule_scene_nodes_pascal_case.rs
src/tests/: mocks.rs  mod.rs
src/util/: ansi.rs  mod.rs  normalize_path.rs  parse_scene_file.rs  should_ignore_rule_for_file.rs  visit_dirs.rs
src/validation/: file_processor.rs  mod.rs  scene_validator.rs
test-projects/ChainedSwords/: project.godot
test_projects/project_a/: godot-arch.config.yaml  (+1 more)
(+134 files in other folders)
