[package]
name = "godot-arch"
version = "0.3.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
lazy_static = "1.5.0"
winapi = { version = "0.3", features = ["consoleapi", "processenv", "wincon", "handleapi", "winbase"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
glob-match = "0.2.1"
convert_case = "0.9.0"
predicates = "3.1.3"
