[package]
name = "godot-arch"
version = "0.6.0"
edition = "2024"
license = "MIT"

[dependencies]
colored = "3.0.0"
lazy_static = "1.5.0"
winapi = { version = "0.3", features = ["consoleapi", "processenv", "wincon", "handleapi", "winbase"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
glob-match = "0.2.1"
convert_case = "0.10.0"
predicates = "3.1.3"
godot-properties-parser = "0.4.0"
serde_json = "1.0.145"
regex = "1.12.2"
clap = { version = "4.5.53", features = ["derive"] }
